2006-08-06  Matthias Wimmer  <m@tthias.eu>

    * util/nad.c: removed unused functions
    * util/util.h: same
    * util/jid.c: tagging some functions as static
    * util/xhash.c: tagging some functions as static

2006-07-30  Matthias Wimmer  <m@tthias.eu>

    * jadc2s.h: robust encoding of SASL security layer on big blocks
    * clients.c: same
    * conn.c: same
    * mio/mio.c: added several sanity checks to mio functions

2006-07-29  Matthias Wimmer  <m@tthias.eu>

    * conn.c: reporting correct SSL function that caused an error

2006-07-28  Matthias Wimmer  <m@tthias.eu>

    * clients.c: fixing bug handling session start iq without id attribute

2006-07-27  Matthias Wimmer  <m@tthias.eu>

    * clients.c: improved SASL error logging
    * jadc2s.c: new configuration option io/authtimeout

2006-07-24  Matthias Wimmer  <m@tthias.eu>

    * jadc2s.c: support for SASL proxy authentication
    * jadc2s.h: same

2006-07-23  Matthias Wimmer  <m@tthias.eu>

    * clients.c: introducing client_send_sc_command()
    * jadc2s.h: makeing some function arguments const
    * util/util.h: same
    * util/nad.c: same
    * connect.c: updates in handling of new sc proto, bugfixes
    * conn.c: updates bounce handling

2006-07-22  Matthias Wimmer  <m@tthias.eu>

    * clients.c: do not update userid on stream restart after authentication,
    	do not report connections as not authenticated, if no username known

2006-07-20  Matthias Wimmer  <m@tthias.eu>

    * jadc2s.c: stringpreping user ids using the nodeprep profile

2006-07-19  Matthias Wimmer  <m@tthias.eu>

    * clients.c: adding sc:c2s attribute before forwarding stanzas to sm
    * connect.c: sanity checks for right recipient

2006-07-15  Matthias Wimmer  <m@tthias.eu>

    * clients.c: implemented SASL authentication using cyrus SASL
    * mio/mio.c: same
    * jadc2s.c: same
    * jadc2s.h: same
    * configure.ac: same
    * connect.c: same
    * util/util.h: same
    * util/jid.c: same
    * conn.c: same
