@@ -8,7 +8,7 @@
 #
 ## Using prereq in autoconf rather than here, mostly for the debian systems at
 ## this point
-if test -z "`autoconf --version 2>&1|head -n 1|egrep '2.5'`"; then
+if test -z "`autoconf --version 2>&1|head -n 1|egrep '2.[56]'`"; then
 	echo "Autoconf 2.50+ is required. Aborting build...";
     exit 1;
 fi
