@@ -1,3 +1,9 @@
+2006-12-07  Matthias Wimmer  <m@tthias.eu>
+
+    * clients.c: fixing problem when using SASL security layer
+    * jadc2s.h: same
+    * conn.c: same
+
 2006-08-06  Matthias Wimmer  <m@tthias.eu>
 
     * util/nad.c: removed unused functions
